Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Widgets have a new "readonly_if_expr" property.
Bug fixes:
~~~~~~~~~~
- Disk file field brought up to [32951] (aftermath of #1335)
- [OPTIM]: fixed abusive use of objectIds() in local voc lookup
- #1730: Calendar widget not working fine when language is Catalan
- Made it possible to create empty vocabularies through the use of
  the CPSInstaller verifyVocabularies method.
- Missing XML ZMI export tab on vocabularies
- Fixed wrong permission check on vocabularies_manage_form.pt.
- Fixed vocabularies_manage_form so that the buttons appear skinned + used
  better HTML markup.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Moved jscalendar lang/ subdir to calendar-lang/ to avoid name collisions.
- Moved BasicWidget.renderHtmlTag to CPSUtil.html
- Removed deprecated _isinstance use.