@@ -4,6 +4,7 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - Widgets have a new "readonly_if_expr" property.
+- Added the possibility to have embedded HTML editor window in the text widget.
 Bug fixes:
 ~~~~~~~~~~
 - Disk file field brought up to [32951] (aftermath of #1335)
